# FilApp

./: AppConfig.h  Application.cpp  Application.h  CMakeLists.txt  CMakePresets.json  ReadMe.md  Renderable.h  View.cpp  View.h  ViewEvents.h  ViewListener.h  Window.cpp  Window.h  WindowConfig.h  WindowsNativeWindowHelper.cpp  WindowsNativeWindowHelper.h  main.cpp
dependencies/: CMakeLists.txt
dependencies/boost/: CMakeLists.txt
dependencies/core/: CMakeLists.txt
dependencies/crossguid/: CMakeLists.txt
dependencies/filament/: CMakeLists.txt
dependencies/geometry/: CMakeLists.txt
dependencies/linal/: CMakeLists.txt
examples/lines/: CMakeLists.txt  example_lines.cpp
examples/points/: CMakeLists.txt  example_points.cpp
examples/triangle/: CMakeLists.txt  example_triangle.cpp  triangle_example.cpp
examples/triangle_animated/: CMakeLists.txt  example_triangle_animated.cpp  triangle_animated.cpp
filapp/: CMakeLists.txt
filapp/include/FilApp/: FilAppCameraView.hpp  FilAppConversion.hpp  FilAppGuiContext.hpp  FilAppRenderable.hpp  FilAppRenderableCreator.hpp  FilAppScene.hpp  FilAppView.hpp  FilAppWindow.hpp  FilApplication.hpp  FilamentCoordinateSystem.hpp  IOHelper.hpp  Vec3.hpp
filapp/source/: FilAppCameraView.cpp  FilAppConversion.cpp  FilAppConversion.hpp  FilAppGuiContext.cpp  FilAppRenderableBuffers.cpp  FilAppRenderableBuffers.hpp  FilAppRenderableCreator.cpp  FilAppScene.cpp  FilAppView.cpp  FilAppWindow.cpp  FilApplication.cpp  NativeWindowHelper.cpp
filapp_examples/lines/: CMakeLists.txt  example_lines.cpp
filapp_examples/points/: CMakeLists.txt  example_points.cpp
filapp_examples/triangle/: CMakeLists.txt  example_triangle.cpp
filapp_examples/triangle_animated/: CMakeLists.txt  example_triangle_animated.cpp
filapp_interface/: CMakeLists.txt
filapp_interface/include/FilAppInterface/: Application.hpp  RGBAColor.hpp  View.hpp  ViewConfig.hpp  WindowConfig.hpp
filapp_interfaces/: AppConfig.hpp  CMakeLists.txt  IInputEventDispatcher.hpp  IInputListener.hpp  IView.hpp  IWindow.hpp  InputEvents.hpp  WindowConfig.hpp
filapp_interfaces/include/FilAppInterfaces/: AppConfig.hpp  Application.hpp  IApplication.hpp  IInputEventDispatcher.hpp  IInputListener.hpp  IView.hpp  IWindow.hpp  InputEvents.hpp  Vec.hpp  Vec3.hpp  Vertex.hpp  View.hpp  ViewConfig.hpp  Viewport.hpp  Window.hpp  WindowConfig.hpp
flowmesh/: CMakeLists.txt  flowMesh.cpp  flowMeshApp.cpp  main.cpp
flowmesh/include/FlowMesh/: Controller.hpp  FlowMesh.hpp  FlowMeshCone.hpp  FlowMeshController.hpp  FlowMeshCylinder.hpp  FlowMeshGuid.hpp  FlowMeshModel.hpp  FlowMeshPoint.hpp  FlowMeshPresenter.hpp  FlowMeshSegments.hpp  FlowMeshSphere.hpp  LinAlConversion.hpp  Model.hpp  ModelEventDispatcher.hpp  ModelEventListener.hpp  Presenter.hpp  PresenterConfig.hpp  PresenterUtils.hpp  TypeId.hpp
flowmesh/source/: Controller.cpp  FlowMesh.cpp  FlowMeshCone.cpp  FlowMeshController.cpp  FlowMeshCylinder.cpp  FlowMeshModel.cpp  FlowMeshPoint.cpp  FlowMeshPresenter.cpp  FlowMeshSegments.cpp  FlowMeshSphere.cpp  Model.cpp  Presenter.cpp
flowmesh/source/GeometryElements/: FlowMeshCone.cpp  FlowMeshCuboid.cpp  FlowMeshCylinder.cpp  FlowMeshGrid.cpp  FlowMeshSegments.cpp  FlowMeshSphere.cpp  GeometryElements.cpp
flowmesh/source/Interactors/: CommandInteractor.cpp  FlowMeshGridInteractor.cpp  PickingContext.cpp  PickingInteractor.cpp  PlacingInteractor.cpp  SnapGeometries.cpp
graphics_app/: CMakeLists.txt
graphics_app/include/Graphics/: AppConfig.hpp  Command.hpp  GraphicsApp.hpp  GraphicsCommandListener.hpp  GraphicsController.hpp  Gui.hpp  RGBAColor.hpp  Vec.hpp  Vertex.hpp  View.hpp  ViewConfig.hpp  Viewport.hpp  Window.hpp  WindowConfig.hpp  WindowEventDispatcher.hpp  WindowEventListener.hpp
graphics_app/include/GraphicsInterface/: Application.hpp  Controller.hpp  GraphicsApp.hpp  GraphicsController.hpp  InputController.hpp  Vec.hpp  Vertex.hpp  View.hpp  ViewConfig.hpp  Viewport.hpp  Window.hpp
graphics_app/source/: GraphicsApp.cpp  Gui.cpp  Vec.cpp  View.cpp  Window.cpp  WindowEventListener.cpp
graphics_app/source/InputEvents/: InputEventListener.cpp  RayPickEventListener.cpp
graphics_interface/: CMakeLists.txt
graphics_interface/include/GraphicsInterface/: AppConfig.hpp  Application.hpp  RGBAColor.hpp  Vec.hpp  Vertex.hpp  View.hpp  ViewConfig.hpp  Viewport.hpp  Window.hpp  WindowConfig.hpp
meshler/: CMakeLists.txt  meshler.cpp
meshler/include/Meshler/: LinAlConversion.hpp  MController.hpp  MGuid.hpp  MModel.hpp  MModelEventDispatcher.hpp  MModelEventListener.hpp  MPresenter.hpp  PresenterConfig.hpp  PresenterUtils.hpp  RenderableBuilder.hpp
meshler/source/: MController.cpp  MModel.cpp  MModelEventListener.cpp  MPresenter.cpp  RenderableBuilder.cpp
meshler/source/GeometryElements/: GeometryElements.cpp  MCone.cpp  MCuboid.cpp  MCylinder.cpp  MGrid.cpp  MSegments.cpp  MSphere.cpp
meshler/source/Interactors/: CommandInteractor.cpp  Interactor.cpp  MGridInteractor.cpp  SnapGeometries.cpp
src/: CMakeLists.txt
src/include/FilApp/: AppConfig.h  AppConfig.hpp  Application.h  Application.hpp  BackendMode.h  CameraMode.h  CameraMode.hpp  EvtPos.h  FilAppConversion.cpp  FilAppConversion.h  FilAppConversion.hpp  FilAppRenderable.hpp  FilAppRenderableCreator.hpp  FilAppView.hpp  FilAppWindow.hpp  FilApplication.hpp  FilWindow.hpp  GlobalCS.hpp  IController.h  IController.hpp  IInputListener.h  IInputListener.hpp  IModel.h  IModel.hpp  IView.h  IView.hpp  InputEvents.h  InputEvents.hpp  NativeWindowHelper.h  PointRenderable.hpp  Renderable.h  Renderable.hpp  TriangleRenderable.hpp  View.h  View.hpp  ViewEvents.h  ViewEvents.hpp  ViewListener.h  ViewListener.hpp  (+4 more)
src/source/: Application.cpp  FilAppConversion.cpp  FilAppConversion.hpp  FilAppRenderable.cpp  FilAppRenderable.hpp  FilAppRenderableBuffers.cpp  FilAppRenderableBuffers.hpp  FilAppRenderableCreator.cpp  FilAppView.cpp  FilAppWindow.cpp  FilApplication.cpp  FilWindow.cpp  NativeWindowHelper.cpp  NativeWindowHelper.hpp  Renderable.cpp  View.cpp  Window.cpp  WindowsNativeWindowHelper.cpp  WindowsNativeWindowHelper.h
(+163 files in other folders)
